Fixed discount inventory in anulate invoice